<resources>
    <string name="app_name">Book Finder</string>
    <string name="startmensage">Guenta ai, já estamos abrindo o App…</string>
    <string name="imageSimble">bookdb Icon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Book Finder</string>
    <string name="nav_header_subtitle">Find the bookdb you want</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="liked">Liked</string>
    <string name="categories">Categories</string>

    <!--About Activity-->
    <string name="title_activity_ac_about">Sobre o App</string>
    <string name="app_version">Version: </string>
    <string name="app_last_update">Last update: </string>
    <string name="app_producers">Idealizador: </string>
    <string name="app_contact">Contato: </string>

    <string name="app_producers_content">NEXER</string>
    <string name="app_version_content">0.1</string>
    <string name="app_last_update_content">28/12/2017 \t\t 08:20</string>
    <string name="app_contact_content">
        \t\tLucas Apolinário Figueiredo\n
        lucasapolinariofigueiredo@gmail.com \n
        (31) 99977-8967
        \n\n
        \t\tGraduando em \n
        Instituto de Ciências Exatas e Aplicadas - ICEA \n
        Universidade Federal de Ouro Preto - JM \n
    </string>
    <string name="loading">Loading ...</string>
</resources>
