<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/magnify"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_liked"
            android:icon="@drawable/heart"
            android:title="@string/liked" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/information_variant"
                android:title="@string/about" />

        </menu>
    </item>

</menu>
