<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/app_version"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <TextView
        android:id="@+id/app_version_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignTop="@+id/app_version"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/app_version"
        android:layout_toRightOf="@+id/app_version"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/app_version_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_version" />


    <TextView
        android:id="@+id/app_last_update"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_version"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_last_update"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_version_content" />

    <TextView
        android:id="@+id/app_last_update_content"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_alignTop="@+id/app_last_update"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/app_last_update"
        android:layout_toRightOf="@+id/app_last_update"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/app_last_update_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_last_update" />

    <TextView
        android:id="@+id/app_producers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_last_update"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_producers"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_last_update_content" />

    <TextView
        android:id="@+id/app_producers_content"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_alignTop="@+id/app_producers"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/app_producers"
        android:layout_toRightOf="@+id/app_producers"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/app_producers_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_producers" />

    <TextView
        android:id="@+id/app_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_producers"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_contact"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_producers_content" />

    <TextView
        android:id="@+id/app_contact_content"
        android:layout_width="wrap_content"
        android:layout_height="147dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_contact"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/app_contact_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_contact" />


</android.support.constraint.ConstraintLayout>